// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create webapp with default parameters 1`] = `
Object {
  "Resources": Object {
    "WebappBucketD38541E4": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BucketEncryption": Object {
          "ServerSideEncryptionConfiguration": Array [
            Object {
              "ServerSideEncryptionByDefault": Object {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappBucketPolicy4224ABFE": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "WebappBucketD38541E4",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "WebappBucketD38541E4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            Object {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "WebappDistribution43D777AD": Object {
      "Properties": Object {
        "DistributionConfig": Object {
          "CustomErrorResponses": Array [
            Object {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": Object {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "ResponseHeadersPolicyId": Object {
              "Ref": "WebappSecurityHeadersResponseHeadersPolicyF5614597",
            },
            "TargetOriginId": "StackWebappDistributionOrigin1098E590D",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": Array [
            Object {
              "DomainName": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "RegionalDomainName",
                ],
              },
              "Id": "StackWebappDistributionOrigin1098E590D",
              "OriginPath": "/web",
              "S3OriginConfig": Object {
                "OriginAccessIdentity": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "origin-access-identity/cloudfront/",
                      Object {
                        "Ref": "WebappOriginAccessIdentityA216A4CF",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "WebappOriginAccessIdentityA216A4CF": Object {
      "Properties": Object {
        "CloudFrontOriginAccessIdentityConfig": Object {
          "Comment": "Allows CloudFront to reach the bucket",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "WebappSecurityHeadersResponseHeadersPolicyF5614597": Object {
      "Properties": Object {
        "ResponseHeadersPolicyConfig": Object {
          "Name": "StackWebappSecurityHeadersResponseHeadersPolicyD3A7BCA3",
          "SecurityHeadersConfig": Object {
            "ContentSecurityPolicy": Object {
              "ContentSecurityPolicy": "base-uri 'self';child-src 'self';connect-src 'self' https:;default-src 'none';font-src 'self';frame-src 'self';form-action 'none';frame-ancestors 'none';img-src 'self' data:;manifest-src 'self';media-src 'self';object-src 'none';script-src 'self';style-src 'self'",
              "Override": true,
            },
            "ContentTypeOptions": Object {
              "Override": true,
            },
            "FrameOptions": Object {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": Object {
              "Override": true,
              "ReferrerPolicy": "same-origin",
            },
            "StrictTransportSecurity": Object {
              "AccessControlMaxAgeSec": 15768000,
              "IncludeSubdomains": false,
              "Override": true,
              "Preload": false,
            },
            "XSSProtection": Object {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
  },
}
`;

exports[`create webapp with domain and custom response header policy with CSP 1`] = `
Object {
  "Resources": Object {
    "WebappBucketD38541E4": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BucketEncryption": Object {
          "ServerSideEncryptionConfiguration": Array [
            Object {
              "ServerSideEncryptionByDefault": Object {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappBucketPolicy4224ABFE": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "WebappBucketD38541E4",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "WebappBucketD38541E4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            Object {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "WebappDistribution43D777AD": Object {
      "Properties": Object {
        "DistributionConfig": Object {
          "Aliases": Array [
            "example.com",
          ],
          "CustomErrorResponses": Array [
            Object {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": Object {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "ResponseHeadersPolicyId": Object {
              "Ref": "WebappSecurityHeadersResponseHeadersPolicyF5614597",
            },
            "TargetOriginId": "StackWebappDistributionOrigin1098E590D",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": Array [
            Object {
              "DomainName": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "RegionalDomainName",
                ],
              },
              "Id": "StackWebappDistributionOrigin1098E590D",
              "OriginPath": "/web",
              "S3OriginConfig": Object {
                "OriginAccessIdentity": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "origin-access-identity/cloudfront/",
                      Object {
                        "Ref": "WebappOriginAccessIdentityA216A4CF",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "WebappOriginAccessIdentityA216A4CF": Object {
      "Properties": Object {
        "CloudFrontOriginAccessIdentityConfig": Object {
          "Comment": "Allows CloudFront to reach the bucket",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "WebappSecurityHeadersResponseHeadersPolicyF5614597": Object {
      "Properties": Object {
        "ResponseHeadersPolicyConfig": Object {
          "Name": "StackWebappSecurityHeadersResponseHeadersPolicyD3A7BCA3",
          "SecurityHeadersConfig": Object {
            "ContentSecurityPolicy": Object {
              "ContentSecurityPolicy": "base-uri 'self';child-src 'self';connect-src 'self';default-src 'none';font-src 'self';frame-src 'self';form-action 'none';frame-ancestors 'none';img-src 'self' data:;manifest-src 'self';media-src 'self';object-src 'none';script-src 'self';style-src 'self'",
              "Override": true,
            },
            "ContentTypeOptions": Object {
              "Override": true,
            },
            "FrameOptions": Object {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": Object {
              "Override": true,
              "ReferrerPolicy": "same-origin",
            },
            "StrictTransportSecurity": Object {
              "AccessControlMaxAgeSec": 15552000,
              "Override": true,
            },
            "XSSProtection": Object {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
  },
}
`;

exports[`create webapp with domain and custom response header policy with report-only CSP 1`] = `
Object {
  "Resources": Object {
    "WebappBucketD38541E4": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BucketEncryption": Object {
          "ServerSideEncryptionConfiguration": Array [
            Object {
              "ServerSideEncryptionByDefault": Object {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappBucketPolicy4224ABFE": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "WebappBucketD38541E4",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "WebappBucketD38541E4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            Object {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "WebappDistribution43D777AD": Object {
      "Properties": Object {
        "DistributionConfig": Object {
          "Aliases": Array [
            "example.com",
          ],
          "CustomErrorResponses": Array [
            Object {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": Object {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "ResponseHeadersPolicyId": Object {
              "Ref": "WebappSecurityHeadersResponseHeadersPolicyF5614597",
            },
            "TargetOriginId": "StackWebappDistributionOrigin1098E590D",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": Array [
            Object {
              "DomainName": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "RegionalDomainName",
                ],
              },
              "Id": "StackWebappDistributionOrigin1098E590D",
              "OriginPath": "/web",
              "S3OriginConfig": Object {
                "OriginAccessIdentity": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "origin-access-identity/cloudfront/",
                      Object {
                        "Ref": "WebappOriginAccessIdentityA216A4CF",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "WebappOriginAccessIdentityA216A4CF": Object {
      "Properties": Object {
        "CloudFrontOriginAccessIdentityConfig": Object {
          "Comment": "Allows CloudFront to reach the bucket",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "WebappSecurityHeadersResponseHeadersPolicyF5614597": Object {
      "Properties": Object {
        "ResponseHeadersPolicyConfig": Object {
          "CustomHeadersConfig": Object {
            "Items": Array [
              Object {
                "Header": "Content-Security-Policy-Report-Only",
                "Override": true,
                "Value": "base-uri 'self';child-src 'self';connect-src 'self';default-src 'none';font-src 'self';frame-src 'self';form-action 'none';frame-ancestors 'none';img-src 'self' data:;manifest-src 'self';media-src 'self';object-src 'none';script-src 'self';style-src 'self'",
              },
            ],
          },
          "Name": "StackWebappSecurityHeadersResponseHeadersPolicyD3A7BCA3",
          "SecurityHeadersConfig": Object {
            "ContentTypeOptions": Object {
              "Override": true,
            },
            "FrameOptions": Object {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": Object {
              "Override": true,
              "ReferrerPolicy": "same-origin",
            },
            "StrictTransportSecurity": Object {
              "AccessControlMaxAgeSec": 15768000,
              "IncludeSubdomains": false,
              "Override": true,
              "Preload": false,
            },
            "XSSProtection": Object {
              "ModeBlock": false,
              "Override": true,
              "Protection": false,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
  },
}
`;

exports[`create webapp with domain and security headers 1`] = `
Object {
  "Resources": Object {
    "WebappBucketD38541E4": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "BucketEncryption": Object {
          "ServerSideEncryptionConfiguration": Array [
            Object {
              "ServerSideEncryptionByDefault": Object {
                "SSEAlgorithm": "AES256",
              },
            },
          ],
        },
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "WebappBucketPolicy4224ABFE": Object {
      "Properties": Object {
        "Bucket": Object {
          "Ref": "WebappBucketD38541E4",
        },
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    Object {
                      "Fn::GetAtt": Array [
                        "WebappBucketD38541E4",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
            Object {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Principal": Object {
                "CanonicalUser": Object {
                  "Fn::GetAtt": Array [
                    "WebappOriginAccessIdentityA216A4CF",
                    "S3CanonicalUserId",
                  ],
                },
              },
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "WebappDistribution43D777AD": Object {
      "Properties": Object {
        "DistributionConfig": Object {
          "Aliases": Array [
            "example.com",
          ],
          "CustomErrorResponses": Array [
            Object {
              "ErrorCode": 404,
              "ResponseCode": 200,
              "ResponsePagePath": "/index.html",
            },
          ],
          "DefaultCacheBehavior": Object {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "ResponseHeadersPolicyId": Object {
              "Ref": "WebappSecurityHeadersResponseHeadersPolicyF5614597",
            },
            "TargetOriginId": "StackWebappDistributionOrigin1098E590D",
            "ViewerProtocolPolicy": "redirect-to-https",
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": Array [
            Object {
              "DomainName": Object {
                "Fn::GetAtt": Array [
                  "WebappBucketD38541E4",
                  "RegionalDomainName",
                ],
              },
              "Id": "StackWebappDistributionOrigin1098E590D",
              "OriginPath": "/web",
              "S3OriginConfig": Object {
                "OriginAccessIdentity": Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "origin-access-identity/cloudfront/",
                      Object {
                        "Ref": "WebappOriginAccessIdentityA216A4CF",
                      },
                    ],
                  ],
                },
              },
            },
          ],
          "PriceClass": "PriceClass_100",
        },
      },
      "Type": "AWS::CloudFront::Distribution",
    },
    "WebappOriginAccessIdentityA216A4CF": Object {
      "Properties": Object {
        "CloudFrontOriginAccessIdentityConfig": Object {
          "Comment": "Allows CloudFront to reach the bucket",
        },
      },
      "Type": "AWS::CloudFront::CloudFrontOriginAccessIdentity",
    },
    "WebappSecurityHeadersResponseHeadersPolicyF5614597": Object {
      "Properties": Object {
        "ResponseHeadersPolicyConfig": Object {
          "Name": "StackWebappSecurityHeadersResponseHeadersPolicyD3A7BCA3",
          "SecurityHeadersConfig": Object {
            "ContentSecurityPolicy": Object {
              "ContentSecurityPolicy": "base-uri 'self';child-src 'self';connect-src 'self' https:;default-src 'none';font-src 'self';frame-src 'self';form-action 'none';frame-ancestors 'none';img-src 'self' data:;manifest-src 'self';media-src 'self';object-src 'none';script-src 'self';style-src 'self'",
              "Override": true,
            },
            "ContentTypeOptions": Object {
              "Override": true,
            },
            "FrameOptions": Object {
              "FrameOption": "DENY",
              "Override": true,
            },
            "ReferrerPolicy": Object {
              "Override": true,
              "ReferrerPolicy": "same-origin",
            },
            "StrictTransportSecurity": Object {
              "AccessControlMaxAgeSec": 15768000,
              "IncludeSubdomains": false,
              "Override": true,
              "Preload": false,
            },
            "XSSProtection": Object {
              "ModeBlock": true,
              "Override": true,
              "Protection": true,
            },
          },
        },
      },
      "Type": "AWS::CloudFront::ResponseHeadersPolicy",
    },
  },
}
`;
